test/end-to-end/compile-errors/pointer-expression-failed-inference.crow
main void() unsafe
	x = 0
	_ nat8* = (&x).pointer-cast
